Fixing z-index of side bar

--- a/stable/styles/min/main_concat.css
+++ b/stable/styles/min/main_concat.css
@@ -1591,7 +1591,7 @@ body {
     overflow: auto;
     scrollbar-width: none;
     float: left;
-    z-index: 10;
+    z-index: 9;
 }
 
 #side-bar::-webkit-scrollbar-track {
